# FYP

./: .gitignore  README.md  platformio.ini
app/: .gitignore  README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: app.dart  main.dart
app/lib/screens/: game_screen.dart  home_screen.dart
app/lib/services/: ble_manager.dart  bluetooth_service.dart  lichess_service.dart
app/lib/widgets/: chess_board.dart  timer_widget.dart
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
embedded/: platformio.ini
embedded/lib/BiMap/: BiMap.h
embedded/lib/Board/: Board.cpp  Board.h
embedded/lib/Chess/: library.json
embedded/lib/Constants/: Constants.h
embedded/lib/Piece/: Piece.cpp  Piece.h
embedded/lib/XYPos/: XYPos.cpp  XYPos.h
embedded/src/: main.cpp
embedded/test_host/: CMakeLists.txt  server.cpp  tests.cpp
embedded/test_host/frontend/: index.html  script.js  style.css
lib/: Board.cpp  Board.h  Piece.cpp  Piece.h  XYPos.cpp  XYpos.h  fft_test.cpp
lib/Board/: Board.cpp  Board.h
lib/Constants/: Constants.h
lib/Piece/: Piece.cpp  Piece.h
lib/XYPos/: XYPos.cpp  XYpos.h
misc/: README.md
src/: main.cpp  test.cpp
test_host/: CMakeLists.txt  CMakePresets.json  main.cpp
(+3 files in other folders)
